單人分享-修正排序

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       // ⭐️⭐️⭐️【 使用者設定區塊 】⭐️⭐️⭐️
       // 請將下方 firebaseConfig 物件的內容，替換成您自己在 Firebase 專案中取得的設定。
       // =======================================================================
-      const firebaseConfig = {
-          apiKey: "AIzaSyXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
-          authDomain: "your-project-id.firebaseapp.com",
-          projectId: "your-project-id",
-          storageBucket: "your-project-id.appspot.com",
-          messagingSenderId: "123456789012",
-          appId: "1:123456789012:web:xxxxxxxxxxxxxxxxxxxxxx"
-      };
+   const firebaseConfig = {
+  apiKey: "AIzaSyACc1hEmcC7GR84_jvtYb2rG5bfErCenCc",
+  authDomain: "homeworktracker-32647.firebaseapp.com",
+  projectId: "homeworktracker-32647",
+  storageBucket: "homeworktracker-32647.firebasestorage.app",
+  messagingSenderId: "614728738497",
+  appId: "1:614728738497:web:222fcb82c471e7095b5640"
+};
       // =======================================================================
       // ⭐️⭐️⭐️【 設定區塊結束 】⭐️⭐️⭐️
       // =======================================================================
@@ -978,4 +978,5 @@
     </script>
 </body>
 </html>
+
 
