--- a/index.html
+++ b/index.html
@@ -897,21 +897,102 @@ const handleSignIn = async () => {
             return null;
         }
 
+        // ✨ 新增：用於 Email/密碼 登入/註冊的狀態 ✨
+        const [email, setEmail] = useState('');
+        const [password, setPassword] = useState('');
+        const [isRegistering, setIsRegistering] = useState(false); // 控制顯示登入或註冊表單
+
+        // ✨ 新增：處理 Email/密碼 登入的函式 (尚未實作邏輯) ✨
+        const handleEmailSignIn = async (e) => {
+          e.preventDefault(); // 防止表單提交跳轉頁面
+          setLoginError('');
+          console.log("嘗試 Email 登入:", email);
+          // TODO: 在第三階段加入 signInWithEmailAndPassword 邏輯
+           setLoginError('Email/密碼 登入功能尚未實作');
+        };
+
+        // ✨ 新增：處理 Email/密碼 註冊的函式 (尚未實作邏輯) ✨
+        const handleEmailSignUp = async (e) => {
+          e.preventDefault();
+          setLoginError('');
+          console.log("嘗試 Email 註冊:", email);
+          // TODO: 在第二階段加入 createUserWithEmailAndPassword 邏輯
+           setLoginError('Email/密碼 註冊功能尚未實作');
+        };
+
+        // ✨ 修改後的未登入畫面 ✨
         if (!user) {
             return (
-                <div className="flex flex-col items-center justify-center min-h-screen bg-indigo-50">
+                <div className="flex flex-col items-center justify-center min-h-screen bg-indigo-50 px-4 py-8">
                     <div className="text-center p-8 bg-white rounded-2xl shadow-xl max-w-md w-full">
                         <h1 className="text-3xl font-extrabold text-indigo-700 mb-2">作業繳交追蹤總表</h1>
                         <p className="text-gray-600 mb-6">一個為老師設計的雲端同步工具</p>
-                        <button onClick={handleSignIn} className="w-full flex items-center justify-center gap-3 px-6 py-3 border border-transparent text-base font-medium rounded-lg text-white bg-indigo-600 hover:bg-indigo-700 transition duration-150">
-                           <svg className="w-6 h-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><path fill="#FFC107" d="M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z"></path><path fill="#FF3D00" d="M6.306,14.691l6.571,4.819C14.655,15.108,18.961,12,24,12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C16.318,4,9.656,8.337,6.306,14.691z"></path><path fill="#4CAF50" d="M24,44c5.166,0,9.86-1.977,13.409-5.192l-6.19-5.238C29.211,35.091,26.715,36,24,36c-5.222,0-9.619-3.317-11.283-7.946l-6.522,5.025C9.505,39.556,16.227,44,24,44z"></path><path fill="#1976D2" d="M43.611,20.083H42V20H24v8h11.303c-0.792,2.237-2.231,4.166-4.087,5.574l6.19,5.238C39.99,36.59,44,30.865,44,24C44,22.659,43.862,21.35,43.611,20.083z"></path></svg>
-                           使用 Google 帳號登入
+
+                        {/* Email/密碼 表單 */}
+                        <form onSubmit={isRegistering ? handleEmailSignUp : handleEmailSignIn} className="space-y-4 mb-6">
+                            <Input
+                                id="email"
+                                type="email"
+                                label="電子郵件"
+                                value={email}
+                                onChange={(e) => setEmail(e.target.value)}
+                                required={true}
+                            />
+                            <Input
+                                id="password"
+                                type="password"
+                                label="密碼"
+                                value={password}
+                                onChange={(e) => setPassword(e.target.value)}
+                                required={true}
+                            />
+                            <Button type="submit" className="w-full bg-blue-600 hover:bg-blue-700" disabled={isSaving}>
+                                {isSaving ? '處理中...' : (isRegistering ? '註冊新帳號' : '登入')}
+                            </Button>
+                        </form>
+
+                        {/* 切換 登入/註冊 模式 */}
+                        <p className="text-sm text-gray-600 mb-4">
+                            {isRegistering ? '已經有帳號了？' : '還沒有帳號嗎？'}
+                            <button
+                                onClick={() => { setIsRegistering(!isRegistering); setLoginError(''); }}
+                                className="font-medium text-indigo-600 hover:text-indigo-500 ml-1"
+                            >
+                                {isRegistering ? '點此登入' : '點此註冊'}
+                            </button>
+                             {/* 可選：稍後加入忘記密碼連結 */}
+                             {/* {!isRegistering && (
+                                <button onClick={handleForgotPassword} className="font-medium text-indigo-600 hover:text-indigo-500 ml-4">
+                                    忘記密碼？
+                                </button>
+                             )} */}
+                        </p>
+
+                        {/* 分隔線 */}
+                        <div className="relative my-6">
+                            <div className="absolute inset-0 flex items-center" aria-hidden="true">
+                                <div className="w-full border-t border-gray-300" />
+                            </div>
+                            <div className="relative flex justify-center text-sm">
+                                <span className="px-2 bg-white text-gray-500">
+                                    或使用其他方式
+                                </span>
+                            </div>
+                        </div>
+
+                        {/* Google 登入按鈕 (保留) */}
+                        <button onClick={handleSignIn} className="w-full flex items-center justify-center gap-3 px-6 py-3 border border-gray-300 text-base font-medium rounded-lg text-gray-700 bg-white hover:bg-gray-50 transition duration-150">
+                            <svg className="w-6 h-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">...</svg> {/* 省略 SVG path */}
+                            使用 Google 帳號登入
                         </button>
+
+                        {/* 錯誤訊息顯示 */}
                         {loginError && <p className="mt-4 text-sm text-red-600 bg-red-100 p-3 rounded-lg">{loginError}</p>}
                     </div>
                 </div>
             );
         }
+        // ... 後續已登入的畫面程式碼不變 ...
         
         const activeClass = classes.find(c => c.id === activeClassId);
         const activeClassName = activeClass?.name || "班級";
@@ -1105,6 +1186,7 @@ const handleSignIn = async () => {
 </script>
 </body>
 </html>
+
 
 
 
