--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 
     // =======================================================================
     // ⭐️⭐️⭐️【 使用者設定區塊 】⭐️⭐️⭐️
-    // 請將下方 firebaseConfig 物件的內容，替換成您自己在 Firebase 專案中取得的設定。
     // =======================================================================
    const firebaseConfig = {
      apiKey: "AIzaSyACc1hEmcC7GR84_jvtYb2rG5bfErCenCc",
@@ -134,13 +133,17 @@
         );
     };
 
+    // =======================================================================
+    // ⭐️⭐️⭐️【 修正：手機版換行問題 】⭐️⭐️⭐️
+    // 在 <th> 標籤的 className 中加入了 "whitespace-nowrap"
+    // =======================================================================
     const StudentCell = ({ student, onEdit, onCopyDefaulterList, isVisitor = false, getSeatNumber, hasUnsubmitted }) => {
         // 決定底色：如果 hasUnsubmitted 為 true，使用淡紅色
         const baseBg = 'bg-gray-50';
         const warningBg = hasUnsubmitted ? 'bg-red-100' : baseBg;
 
         return (
-            <th className={`border p-1 text-sm text-center font-semibold text-gray-800 sticky left-0 z-10 ${isVisitor ? 'w-20' : 'w-32'} ${warningBg}`}>
+            <th className={`border p-1 text-sm text-center font-semibold text-gray-800 sticky left-0 z-10 ${isVisitor ? 'w-20' : 'w-32'} ${warningBg} whitespace-nowrap`}>
                 <div className="flex items-center justify-between group px-2">
                     <span className={isVisitor ? '' : 'cursor-pointer hover:underline'} onClick={isVisitor ? null : onEdit}>
                         {isVisitor ? getSeatNumber(student.name) : student.name}
@@ -919,33 +922,38 @@
         };
 
         // =======================================================================
-        // ⭐️⭐️⭐️【 修正 3：預設時間為 15:00 】⭐️⭐️⭐️
-        // 在 useEffect 鉤子中修改新增作業時的預設 dueDate
+        // ⭐️⭐️⭐️【 修正：預設時間為 17:00 + 時區處理 】⭐️⭐️⭐️
         // =======================================================================
         useEffect(() => {
             if (modal.type) {
                 if (modal.data) {
-                    // --- 編輯模式 ---
+                    // --- 編輯模式 (修正時區偏移) ---
                     let formData = {...modal.data};
                     if(modal.type === 'assignment' && formData.dueDate && (formData.dueDate.seconds || typeof formData.dueDate === 'string')) {
                         const d = new Date(formData.dueDate.seconds ? formData.dueDate.seconds * 1000 : formData.dueDate);
-                        // 修正：在轉換為 ISO 字串前，不需要減去 timezoneOffset
-                        // 因為 toISOString 本身就是 UTC 時間，datetime-local input 會自動處理本地時區
-                        formData.dueDate = d.toISOString().slice(0, 16);
+                        // 轉換為本地時間的 YYYY-MM-DDTHH:mm
+                        const localDate = new Date(d.getTime() - (d.getTimezoneOffset() * 60000));
+                        formData.dueDate = localDate.toISOString().slice(0, 16);
                     }
                     setFormState(formData);
                 } else {
-                    // --- 新增模式 ---
-                    // ⭐️ 【修改】設定預設時間為 15:00
+                    // --- 新增模式 (設定 17:00 本地時間) ---
+                    // ⭐️ 【修改】設定預設時間為 17:00 (本地時間)
                     const defaultDueDate = new Date();
-                    defaultDueDate.setHours(17, 0, 0, 0); // 設定時間為下午 5:00
-                    // 修正：同樣不需要減去 timezoneOffset
-                    const formattedDefaultDueDate = defaultDueDate.toISOString().slice(0, 16);
+                    defaultDueDate.setHours(17, 0, 0, 0); // 設定本地時間為下午 5:00
+
+                    // ⭐️ 【修改】手動產生 YYYY-MM-DDTHH:mm 格式字串，避免時區問題
+                    const year = defaultDueDate.getFullYear();
+                    const month = String(defaultDueDate.getMonth() + 1).padStart(2, '0');
+                    const day = String(defaultDueDate.getDate()).padStart(2, '0');
+                    const hours = String(defaultDueDate.getHours()).padStart(2, '0');
+                    const minutes = String(defaultDueDate.getMinutes()).padStart(2, '0');
+                    const formattedDefaultDueDate = `${year}-${month}-${day}T${hours}:${minutes}`;
 
                     const defaultState = {
                         class: { name: '', isPublic: false },
                         student: { name: '', studentList: '' },
-                        // ⭐️ 【修改】使用新的預設 dueDate
+                        // ⭐️ 【修改】使用新的預設 dueDate (本地時間格式)
                         assignment: { title: '', dueDate: formattedDefaultDueDate },
                         linkEmail: { email: user?.email || '', password: '' }
                     };
@@ -1007,15 +1015,18 @@
                                <div className="mt-4 border-t pt-3">
                                 <div className="flex flex-wrap items-center gap-x-4 gap-y-2 text-gray-600">
                                     <span className="font-bold">圖例:</span>
-                                    <div className="flex items-center gap-1"><div className="w-4 h-4 rounded-full bg-green-500"></div><span>準時繳交</span></div>
-                                    <div className="flex items-center gap-1"><div className="w-4 h-4 rounded-full bg-yellow-500"></div><span>補交完成</span></div>
-                                    <div className="flex items-center gap-1"><div className="w-4 h-4 rounded-full bg-red-500"></div><span>逾期未交</span></div>
-                                    <div className="flex items-center gap-1"><div className="w-4 h-4 rounded-full bg-white border-2 border-gray-400"></div><span>尚未檢查</span></div>
-                                    <div className="flex items-center gap-1"><div className="w-4 h-4 rounded-full bg-gray-500"></div><span>忽略不計</span></div>
+                                    <div className="flex items-center gap-1"><div className="w-4 h-4 rounded-full bg-green-500"></div><span>準時</span></div>
+                                    <div className="flex items-center gap-1"><div className="w-4 h-4 rounded-full bg-yellow-500"></div><span>補交</span></div>
+                                    <div className="flex items-center gap-1"><div className="w-4 h-4 rounded-full bg-red-500"></div><span>逾期</span></div>
+                                    <div className="flex items-center gap-1"><div className="w-4 h-4 rounded-full bg-white border-2 border-gray-400"></div><span>未檢</span></div>
+                                    <div className="flex items-center gap-1"><div className="w-4 h-4 rounded-full bg-gray-500"></div><span>忽略</span></div>
                                 </div>
                             </div>
                         </header>
                         <main>
+                            {/* // =======================================================================
+                            // ⭐️⭐️⭐️【 按鈕文字修改確認 (訪客頁面) 】⭐️⭐️⭐️
+                            // ======================================================================= */}
                             <div className="flex justify-end gap-4 mb-2">
                                 <Button onClick={() => handleCopyAllUnsubmitted()} className="bg-pink-500 hover:bg-pink-600">未繳總表</Button>
                                 <Button onClick={() => handleExportMailMergeCSV()} className="bg-green-600 hover:bg-green-700">匯出清單 (CSV)</Button>
@@ -1256,9 +1267,11 @@
                              <h2 className="text-2xl font-bold text-gray-800">{activeClassName}</h2>
                              <div className="flex flex-wrap items-center gap-4">
                                <Button onClick={() => setModal({ type: 'assignment', data: null })} className="bg-purple-500 hover:bg-purple-600">＋ 新增作業</Button>
-                               <Button onClick={handleCopyAllUnsubmitted} className="bg-pink-500 hover:bg-pink-600">複製全班未繳總表</Button>
-                               {/* 🚀【功能 2：匯出催繳總表】按鈕已新增 */}
-                               <Button onClick={handleExportMailMergeCSV} className="bg-green-600 hover:bg-green-700">匯出催繳總表 (CSV)</Button>
+                               {/* // =======================================================================
+                               // ⭐️⭐️⭐️【 按鈕文字修改確認 】⭐️⭐️⭐️
+                               // ======================================================================= */}
+                               <Button onClick={handleCopyAllUnsubmitted} className="bg-pink-500 hover:bg-pink-600">未繳總表</Button>
+                               <Button onClick={handleExportMailMergeCSV} className="bg-green-600 hover:bg-green-700">匯出清單 (CSV)</Button>
                                <Button 
                                  onClick={() => setIsClearCompletedModalOpen(true)} 
                                  disabled={completedAssignments.length === 0} 
@@ -1316,4 +1329,3 @@
 </script>
 </body>
 </html>
-
